{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 17,
  "lineage": "817891a1-12da-2659-b992-b4c9103d02d0",
  "resources": [
    {
      "module": "module.EC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:instance/i-0fde46413d24beb05",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fde46413d24beb05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stage",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df75b64bef93ce91",
            "private_dns": "ip-172-181-1-162.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.181.1.162",
            "public_ip": "3.110.214.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07546e203c7f15bc6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0665856432e8ea273"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003f9465316d80dab",
            "tags": {
              "Name": "stage - 1"
            },
            "tags_all": {
              "Name": "stage - 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0665856432e8ea273"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.tf-key-pair",
            "module.EC2.tls_private_key.rsa",
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08718895af4dfa033",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:instance/i-0e7247ff42b367a9b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7247ff42b367a9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stage",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca9ab8258e60fdd0",
            "private_dns": "ip-172-181-2-64.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.181.2.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ef13ca8e3668d5a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0665856432e8ea273"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3ecfe0356b27cd2",
            "tags": {
              "Name": "stage - 2"
            },
            "tags_all": {
              "Name": "stage - 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0665856432e8ea273"
            ]
          },
          "dependencies": [
            "module.EC2.aws_key_pair.tf-key-pair",
            "module.EC2.tls_private_key.rsa",
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_route_table_association.a",
            "module.vpc.aws_route_table_association.b",
            "module.vpc.aws_security_group.sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04db1eb85435e4aaa",
            "arn": "arn:aws:ec2:ap-south-1:767397922031:elastic-ip/eipalloc-04db1eb85435e4aaa",
            "associate_with_private_ip": "172.181.2.0/24",
            "domain": "vpc",
            "id": "eipalloc-04db1eb85435e4aaa",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-100-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.100.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:internet-gateway/igw-0b034dfd3c458d203",
            "id": "igw-0b034dfd3c458d203",
            "owner_id": "767397922031",
            "tags": {
              "Name": "stage-terraform-igw"
            },
            "tags_all": {
              "Name": "stage-terraform-igw"
            },
            "vpc_id": "vpc-03ce6d2665a8d43a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04db1eb85435e4aaa",
            "association_id": "eipassoc-091efa9d11cd6ae28",
            "connectivity_type": "public",
            "id": "nat-01696c6a2cdb7ef36",
            "network_interface_id": "eni-073ca0a17ee63289d",
            "private_ip": "172.181.2.195",
            "public_ip": "13.200.100.129",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c3ecfe0356b27cd2",
            "tags": {
              "Name": "stage-terraform-nat"
            },
            "tags_all": {
              "Name": "stage-terraform-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:route-table/rtb-09cd4e4932887a72a",
            "id": "rtb-09cd4e4932887a72a",
            "owner_id": "767397922031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b034dfd3c458d203",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-rt1"
            },
            "tags_all": {
              "Name": "stage-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce6d2665a8d43a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:route-table/rtb-09387bf6112594882",
            "id": "rtb-09387bf6112594882",
            "owner_id": "767397922031",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01696c6a2cdb7ef36",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-rt2"
            },
            "tags_all": {
              "Name": "stage-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce6d2665a8d43a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b73b5a4ed2d86f9",
            "route_table_id": "rtb-09cd4e4932887a72a",
            "subnet_id": "subnet-003f9465316d80dab"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09072641ef8b81b29",
            "route_table_id": "rtb-09387bf6112594882",
            "subnet_id": "subnet-0c3ecfe0356b27cd2"
          },
          "dependencies": [
            "module.vpc.aws_eip.elastic-ip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:security-group/sg-0665856432e8ea273",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0665856432e8ea273",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.181.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-sg",
            "name_prefix": "",
            "owner_id": "767397922031",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-sg"
            },
            "tags_all": {
              "Name": "stage-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ce6d2665a8d43a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:subnet/subnet-0c3ecfe0356b27cd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.181.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3ecfe0356b27cd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397922031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-private-tf"
            },
            "tags_all": {
              "Name": "stage-private-tf"
            },
            "vpc_id": "vpc-03ce6d2665a8d43a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:subnet/subnet-003f9465316d80dab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.181.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003f9465316d80dab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397922031",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-public-tf"
            },
            "tags_all": {
              "Name": "stage-public-tf"
            },
            "vpc_id": "vpc-03ce6d2665a8d43a7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397922031:vpc/vpc-03ce6d2665a8d43a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.181.0.0/16",
            "default_network_acl_id": "acl-08780cbf8dcc51dce",
            "default_route_table_id": "rtb-0066c920436a5881c",
            "default_security_group_id": "sg-0af4d09be466e67dc",
            "dhcp_options_id": "dopt-0c4428013e72b7af1",
            "enable_dns_hostnames": true,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ce6d2665a8d43a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0066c920436a5881c",
            "owner_id": "767397922031",
            "tags": {
              "Name": "stage-terraform-vpc"
            },
            "tags_all": {
              "Name": "stage-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}